@@ -275,7 +275,7 @@ public class FormulaFactory {
         List<String> formulas = group.getPillars().stream()
                 .filter(pillar -> pillar.getCategory().startsWith(PREFIX))
                 .map(pillar -> pillar.getCategory().substring(PREFIX.length()))
-                .collect(Collectors.toList());
+                .toList();
 
         return orderFormulas(formulas);
     }
@@ -289,7 +289,7 @@ public class FormulaFactory {
         List<String> formulas = orderFormulas(minion.getPillars().stream()
                 .filter(pillar -> pillar.getCategory().startsWith(PREFIX))
                 .map(pillar -> pillar.getCategory().substring(PREFIX.length()))
-                .collect(Collectors.toList()));
+                .toList());
 
         return orderFormulas(formulas);
     }
@@ -785,7 +785,7 @@ public class FormulaFactory {
                             proxyEnabled ? exporterConfig.getProxyModuleOrFallback() : null,
                             proxyPath,
                             tlsEnabled))
-                    .collect(Collectors.toList());
+                    .toList();
         }
         else {
             return new ArrayList<>();
