@@ -45,7 +45,6 @@ import org.junit.jupiter.api.Test;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 public class AttestationFactoryTest extends BaseTestCaseWithUser {
 
@@ -139,7 +138,7 @@ public class AttestationFactoryTest extends BaseTestCaseWithUser {
         assertNotEmpty(results);
         List<CoCoResultType> rTypeList = results.stream()
                 .map(CoCoAttestationResult::getResultType)
-                .collect(Collectors.toList());
+                .toList();
         assertContains(rTypeList, CoCoResultType.SEV_SNP);
         assertContains(rTypeList, CoCoResultType.SECURE_BOOT);
         assertNotContains(rTypeList, CoCoResultType.NONE);
